appId: ${appId}
---
- tapOn:
      point: "88%,94%"
- tapOn: "Button\nLOGOUT"
- waitForAnimationToEnd
- assertVisible: "Do you want to Logout?"
- tapOn: "Button\nLogout"

- waitForAnimationToEnd

# 6) Саніті: повернулися на лендінг авторизації
- assertVisible: "Button\nCONTINUE WITH EMAIL"
