appId: ${appId}
---

- tapOn:
      point: "88%,94%"



- tapOn: "Button\nEDIT PERSONAL INFO"



- swipe:
    start: "50%,80%"
    end: "50%,20%"

- tapOn: "DELETE ACCOUNT\nDELETE ACCOUNT"
- tapOn: "Button\nDelete"

- assertVisible: "Please sign in again?"
- tapOn: "Button\nSign in again"



- runFlow: ../../Tests/01_Auth/03_Auth_Login_HappyPath.yaml

- runFlow:
      when:
          visible: "Button\nSTART 7-DAY TRIAL FOR $0"
      commands:
          - tapOn:
                point: "10%,7%"


- tapOn:
      point: "88%,94%"

- tapOn: "Button\nEDIT PERSONAL INFO"
- swipe:
      start: "50%,80%"
      end: "50%,20%"

- tapOn: "DELETE ACCOUNT\nDELETE ACCOUNT"
- tapOn: "Button\nDelete"



- assertVisible: "Button\nCONTINUE WITH EMAIL"



