appId: ${appId}
---
# Форма логіну (email + пароль)

- assertVisible: "EMAIL"
- assertVisible: "PASSWORD"

- tapOn: "EMAIL"
- inputText: ${EMAIL}

- tapOn: "PASSWORD"
- inputText: ${PASSWORD}

- waitForAnimationToEnd

- assertVisible: "Button\nCONTINUE WITH EMAIL"
- tapOn: "Button\nCONTINUE WITH EMAIL"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Button\nSTART 7-DAY TRIAL FOR $0"
    commands:
      - tapOn: "Button"
    optional: true

