appId: ${appId}
---
# Auth_FillSignUp_Form.yaml

- tapOn: "FIRST NAME*"
- inputText: ${FIRSTNAME}

- tapOn: "LAST NAME*"
- inputText: ${LASTNAME}

- tapOn: "EMAIL*"
- inputText: ${NEW_EMAIL}

- tapOn: "PASSWORD"
- inputText: ${PASSWORD}

- waitForAnimationToEnd

# Погоджуємось з умовами (тап по тексту стабільно активує чекбокс)
- tapOn:
        point: "8%,44%"

# Сабміт

- tapOn: "Button\nCONTINUE"
- waitForAnimationToEnd
- assertVisible: "Button\nSTART 7-DAY TRIAL FOR $0"
- tapOn:
          point: "10%,7%"
- assertVisible: "Button\nUPGRADE MY PLAN"