appId: ${appId}
---
# Auth_OpenEmailForm.yaml


# Відкрити форму реєстрації по email
- assertVisible: "Button\nCONTINUE WITH EMAIL"
- tapOn: "Button\nCONTINUE WITH EMAIL"
- waitForAnimationToEnd

# Перевірки форми "Sign Up"

- assertVisible: "FIRST NAME*"
- assertVisible: "LAST NAME*"
- assertVisible: "EMAIL*"
- assertVisible: "PASSWORD"
- assertVisible: "By continuing, you agree to Quantum Body"
- assertVisible: " Terms & Conditions "
- assertVisible: "Privacy Policy"
- assertVisible: "Button\nCONTINUE"

