appId: ${appId}
---


- tapOn: "Button\nGET STARTED"
- waitForAnimationToEnd

# Екран 2
- assertVisible: "WELCOME TO YOUR

    PERSONAL SANCTUARY FOR ALIGNMENT AND\ 

    CO-CREATION.\ 

    Track synchronicities, dreams, manifestations,

    intentions, and gratitude—practices that

    ground you in the present, inspire your future,

    and tune you into the signs along the way. "

- tapOn: "Button\nGET STARTED"
- waitForAnimationToEnd

# Екран 3
- assertVisible: "YOUR\nALIGNMENT LOG"
- tapOn: "Button\nNEXT"
- waitForAnimationToEnd

# Екран 4
# Системний діалог нотифікацій (може не з’явитись)
- tapOn:
      text: "Allow"
      optional: true


- assertVisible: "SET\nMOMENTS TO TUNE IN"
- tapOn: "Button\n7:00 AM"
- tapOn: "Button\n11:00 AM"
- tapOn:
        point: "50%,31%"
- tapOn: "Button\nEVERY DAY"
- tapOn: "Button\nEVERY DAY"

- tapOn: "Button\nNEXT"


